--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -46,7 +46,11 @@
         android:id="@+id/clientFragment"
         android:name="org.kazantsev.coursework.fragments.ClientFragment"
         android:label="fragment_client"
-        tools:layout="@layout/fragment_client" />
+        tools:layout="@layout/fragment_client" >
+        <argument
+            android:name="id"
+            app:argType="integer" />
+    </fragment>
     <fragment
         android:id="@+id/deliveryFragment"
         android:name="org.kazantsev.coursework.fragments.DeliveryFragment"
